# pyimg

./: .bumpversion.cfg  .cookiecutter.json  .env  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cats vs. Dogs.ipynb  EXEMPLO_01 - Cats Vs Dogs.ipynb  EXEMPLO_02 - MNIST Feed-Forward.ipynb  EXEMPLO_03 - MNIST ConvNet.ipynb  EXEMPLO_04- MNIST Vision Transformer.ipynb  EXTRA - ATARI DEEP-Q LEARNING.ipynb  EXTRA - ATARI DEEP-Q.ipynb  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tbump.toml  tox.ini
.github/workflows/: constraints.txt  tests.yml
.ipynb_checkpoints/: EXEMPLO_02 - MNIST Feed-Forward-checkpoint.ipynb  EXTRA - ATARI DEEP-Q-checkpoint.ipynb  Test-checkpoint.ipynb
conda.recipe/: meta.yaml
docs/: authors.md  conf.py  history.md  index.md  reference.md  requirements.txt  usage.md
docs/_static/: Untitled.ipynb
logs/fit/20220518-004416/train/: events.out.tfevents.1652845525.MacBook-Pro-de-Erik.local.94146.0.v2
logs/fit/20220518-004416/validation/: events.out.tfevents.1652845717.MacBook-Pro-de-Erik.local.94146.1.v2
logs/fit/20220518-005354/train/: events.out.tfevents.1652846037.MacBook-Pro-de-Erik.local.94146.2.v2
logs/fit/20220518-005354/validation/: events.out.tfevents.1652846234.MacBook-Pro-de-Erik.local.94146.3.v2
logs/mnist-fit/20220418-013719/: events.out.tfevents.1650257054.MacBook-Pro-de-Erik.local.profile-empty
logs/mnist-fit/20220418-013719/train/: events.out.tfevents.1650257053.MacBook-Pro-de-Erik.local.34437.0.v2  events.out.tfevents.1650257382.MacBook-Pro-de-Erik.local.34437.2.v2  events.out.tfevents.1650257520.MacBook-Pro-de-Erik.local.34437.4.v2  events.out.tfevents.1650257926.MacBook-Pro-de-Erik.local.34437.6.v2  keras_embedding.ckpt-0.index  keras_embedding.ckpt-1.index  keras_embedding.ckpt-10.index  keras_embedding.ckpt-11.index  keras_embedding.ckpt-12.index  keras_embedding.ckpt-13.index  keras_embedding.ckpt-14.index  keras_embedding.ckpt-2.index  keras_embedding.ckpt-3.index  keras_embedding.ckpt-4.index  keras_embedding.ckpt-5.index  keras_embedding.ckpt-6.index  keras_embedding.ckpt-7.index  keras_embedding.ckpt-8.index  keras_embedding.ckpt-9.index
logs/mnist-fit/20220418-013719/validation/: events.out.tfevents.1650257057.MacBook-Pro-de-Erik.local.34437.1.v2  events.out.tfevents.1650257382.MacBook-Pro-de-Erik.local.34437.3.v2  events.out.tfevents.1650257523.MacBook-Pro-de-Erik.local.34437.5.v2  events.out.tfevents.1650257926.MacBook-Pro-de-Erik.local.34437.7.v2
logs/mnist-fit/20220418-020105/: events.out.tfevents.1650258108.MacBook-Pro-de-Erik.local.profile-empty
logs/mnist-fit/20220418-020105/train/: events.out.tfevents.1650258107.MacBook-Pro-de-Erik.local.34437.8.v2  events.out.tfevents.1650258158.MacBook-Pro-de-Erik.local.34437.10.v2  events.out.tfevents.1650258276.MacBook-Pro-de-Erik.local.34437.12.v2  events.out.tfevents.1650258297.MacBook-Pro-de-Erik.local.34437.14.v2  events.out.tfevents.1650258489.MacBook-Pro-de-Erik.local.34437.16.v2  events.out.tfevents.1650258531.MacBook-Pro-de-Erik.local.34437.18.v2  events.out.tfevents.1650258695.MacBook-Pro-de-Erik.local.34437.20.v2  events.out.tfevents.1650258819.MacBook-Pro-de-Erik.local.34437.22.v2  events.out.tfevents.1650258838.MacBook-Pro-de-Erik.local.34437.24.v2  events.out.tfevents.1650259064.MacBook-Pro-de-Erik.local.34437.26.v2  events.out.tfevents.1650259147.MacBook-Pro-de-Erik.local.34437.28.v2
logs/mnist-fit/20220418-020105/validation/: events.out.tfevents.1650258112.MacBook-Pro-de-Erik.local.34437.9.v2  events.out.tfevents.1650258163.MacBook-Pro-de-Erik.local.34437.11.v2  events.out.tfevents.1650258281.MacBook-Pro-de-Erik.local.34437.13.v2  events.out.tfevents.1650258301.MacBook-Pro-de-Erik.local.34437.15.v2  events.out.tfevents.1650258493.MacBook-Pro-de-Erik.local.34437.17.v2  events.out.tfevents.1650258536.MacBook-Pro-de-Erik.local.34437.19.v2  events.out.tfevents.1650258699.MacBook-Pro-de-Erik.local.34437.21.v2  events.out.tfevents.1650258823.MacBook-Pro-de-Erik.local.34437.23.v2  events.out.tfevents.1650258841.MacBook-Pro-de-Erik.local.34437.25.v2  events.out.tfevents.1650259067.MacBook-Pro-de-Erik.local.34437.27.v2  events.out.tfevents.1650259151.MacBook-Pro-de-Erik.local.34437.29.v2
logs/mnist-fit/20220418-022041/: events.out.tfevents.1650259288.MacBook-Pro-de-Erik.local.profile-empty
logs/mnist-fit/20220418-022041/cm/: events.out.tfevents.1650259291.MacBook-Pro-de-Erik.local.34437.32.v2  events.out.tfevents.1650259294.MacBook-Pro-de-Erik.local.34437.33.v2  events.out.tfevents.1650259297.MacBook-Pro-de-Erik.local.34437.34.v2  events.out.tfevents.1650259301.MacBook-Pro-de-Erik.local.34437.35.v2  events.out.tfevents.1650259305.MacBook-Pro-de-Erik.local.34437.36.v2  events.out.tfevents.1650259308.MacBook-Pro-de-Erik.local.34437.37.v2  events.out.tfevents.1650259312.MacBook-Pro-de-Erik.local.34437.38.v2  events.out.tfevents.1650259317.MacBook-Pro-de-Erik.local.34437.39.v2  events.out.tfevents.1650259321.MacBook-Pro-de-Erik.local.34437.40.v2  events.out.tfevents.1650259325.MacBook-Pro-de-Erik.local.34437.41.v2  events.out.tfevents.1650259331.MacBook-Pro-de-Erik.local.34437.42.v2  events.out.tfevents.1650259337.MacBook-Pro-de-Erik.local.34437.43.v2  events.out.tfevents.1650259343.MacBook-Pro-de-Erik.local.34437.44.v2  events.out.tfevents.1650259348.MacBook-Pro-de-Erik.local.34437.45.v2  events.out.tfevents.1650259354.MacBook-Pro-de-Erik.local.34437.46.v2
logs/mnist-fit/20220418-022041/train/: events.out.tfevents.1650259288.MacBook-Pro-de-Erik.local.34437.30.v2
src/pyimg/: __init__.py  __main__.py  cli.py  img_download.py  img_plot.py  log.py  preprocessing.py
src/pyimg/conf/: __init__.py  config.yaml
tests/: __init__.py  test_img_plot.py  test_main.py
(+58 files in other folders)
